@@ -1,11 +1,7 @@
 language: r
-r:
-  - devel
-sudo: false
 cache: packages
-bioc_required: true
 warnings_are_errors: false
-# Used for code coverage testing with covr and codecov
+r: bioc-devel
 r_github_packages:
   - jimhester/covr
 after_success:
